# backend/src/Users/Application/Details/UserDetailsResponse.cs
@@ -1,0 +1,3 @@
+namespace Wallanoti.Src.Users.Application.Details;
+
+public sealed record UserDetailsResponse(long Id, string UserName);
